--- a/assets/styles/elements/_SearchField.scss
+++ b/assets/styles/elements/_SearchField.scss
@@ -4,6 +4,7 @@
 @use "../common/variables" as *;
 
 .searchField {
+	position: relative;
 	width: 100%;
 	margin: 0;
 
